src/test/ui/issues/issue-49040.stderr
error: expected item, found `;`
  --> $DIR/issue-49040.rs:1:28
   |
LL | #![allow(unused_variables)]; //~ ERROR expected item, found `;`
   |                            ^ help: consider removing this semicolon

error: aborting due to previous error

